# ty-samples

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_simu.sh
examples/: CMakeLists.txt  dcl_infer.cpp  dcl_infer_multi_input_custom.cpp  dcl_infer_pplcnet.cpp  dcl_infer_resnet.cpp  dcl_infer_retinaface.cpp  dcl_infer_yolo_nas.cpp  dcl_infer_yolov3.cpp  dcl_infer_yolov3_opt.cpp  dcl_infer_yolov5.cpp  dcl_infer_yolov5_seg.cpp  dcl_infer_yolov6.cpp  dcl_infer_yolov6_face.cpp  dcl_infer_yolov7.cpp  dcl_infer_yolov7_pose.cpp  dcl_infer_yolov8.cpp  dcl_infer_yolov8_pose.cpp  dcl_infer_yolov8_pose2.cpp  dcl_infer_yolov8_seg.cpp  ty_infer_pplcnet.cpp  ty_infer_resnet.cpp  ty_infer_retinaface.cpp  ty_infer_yolo_nas.cpp  ty_infer_yolov3.cpp  ty_infer_yolov3_opt.cpp  ty_infer_yolov5.cpp  ty_infer_yolov5_seg.cpp  ty_infer_yolov6.cpp  ty_infer_yolov6_face.cpp  ty_infer_yolov7.cpp  ty_infer_yolov7_pose.cpp  ty_infer_yolov8.cpp  ty_infer_yolov8_pose.cpp  ty_infer_yolov8_pose2.cpp  ty_infer_yolov8_seg.cpp
examples/python/: sample_yolov3.py  sample_yolov5.py  sample_yolov6.py  sample_yolov7.py  sample_yolov8.py
python/: pymz.cpp  sample_yolov5.py  utils.py
python/datasets/: __init__.py  base_dataset.py  coco.py  imagenet.py  voc.py  widerface.py
src/: CMakeLists.txt  base_type.h
src/codecs/: dcl_jpeg.cpp  dcl_jpeg.h
src/models/: detr.cpp  detr.h  pplcnet.cpp  pplcnet.h  regnet.h  resnet.h  retinaface.cpp  retinaface.h  swin_v2.h  yolo_nas.cpp  yolo_nas.h  yolov3.cpp  yolov3.h  yolov3_opt.cpp  yolov3_opt.h  yolov5.cpp  yolov5.h  yolov5_seg.cpp  yolov5_seg.h  yolov6.h  yolov6_face.cpp  yolov6_face.h  yolov7.h  yolov7_pose.cpp  yolov7_pose.h  yolov8.cpp  yolov8.h  yolov8_pose.cpp  yolov8_pose.h  yolov8_pose2.cpp  yolov8_pose2.h  yolov8_seg.cpp  yolov8_seg.h
src/models/base/: base_classification.cpp  base_classification.h  base_detection.cpp  base_detection.h  net_operator.cpp  net_operator.h
src/utils/: bitmap_image.hpp  color.h  device.h  image.h  line.h  macro.h  math_utils.h  nms.h  resize.h  to_bin.h  utils.h
tools/: CMakeLists.txt  dcl_infer_prof.cpp
